# newCryptoBot

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ConanFile.py  conan_provider.cmake  conanfile.py  readme.txt
conan/: BZip2-release-x86_64-data.cmake  Boost-release-x86_64-data.cmake  CMakePresets.json  Iconv-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  libbacktrace-release-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake
scripts/: gateio_trading_time.py
src/: BotConfig.cpp  BotConfig.hpp  BotManager.cpp  BotManager.hpp  BotType.cpp  BotType.hpp  ListingBot.cpp  ListingBot.hpp  PriceWatcher.cpp  PriceWatcher.hpp  main.cpp
src/exchangeController/: AbstractExchangeController.hpp  ExchangeControllerFactory.cpp  ExchangeControllerFactory.hpp  GateioController.cpp  GateioController.hpp  KucoinController.cpp  KucoinController.hpp
src/exchanges/gateiocpp/src/: GateioController.cpp  GateioController.hpp  gateiocpp.cpp  gateiocpp.h
src/exchanges/kucoincpp/src/: KucoinController.cpp  kucoincpp.cpp  kucoincpp.hpp
src/tools/: FixedPoint.cpp  FixedPoint.hpp  LinearExtrapoler.cpp  LinearExtrapoler.hpp  cct_codec.cpp  cct_codec.hpp  chrono.cpp  chrono.hpp  logger.cpp  logger.hpp  mail.cpp  mail.hpp  sha.cpp  sha.hpp  ssl_sha.cpp  ssl_sha.hpp  tools.cpp  tools.hpp
